Decrease likelihood of XSS attack via attribute code-injection
Basically, just put quotes around any dynamically-assigned element
attribute value, in this case value="{{max}}".

--- a/templates/results.html
+++ b/templates/results.html
@@ -117,7 +117,7 @@
 
           <!--HTTP is a stateless protocol; need to send this info back, so we
          can redisplay it once the CGI web script is done processing-->
-          <input type='hidden' name="max" value={{max}}></input>
+          <input type='hidden' name="max" value="{{max}}"></input>
           <input type='hidden' name="input_text" value="{{input_text}}"></input>
 
           <!-- Need to resend the sentence list in case sentences have been
@@ -178,7 +178,7 @@
 
            <!--HTTP is a stateless protocol; need to send this info back, so we
           can redisplay it once the CGI web script is done processing-->
-           <input type='hidden' name="max" value={{max}}></input>
+           <input type='hidden' name="max" value="{{max}}"></input>
            <input type='hidden' name="input_text" value="{{input_text}}"></input>
 
            <!-- Need to resend the sentence list in case sentences have been
